--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <meta property="og:title" content="Print At Prasad" />
     <meta property="og:description" content="Print At Prasad" />
     <meta property="og:image" content="Print At Prasad" />
-    
+    <!-- <meta name="format-detection" content="telephone=no"> -->
+
+    <!-- FAVICONS ICON --> 
+    <!-- PAGE TITLE HERE -->
     <title>Print at Prasad Coming Soon</title>
 
     <!-- MOBILE SPECIFIC -->
@@ -35,6 +38,9 @@
 </head>
 
 <body id="bg" class="font-poppins">
+    <div id="loading-area">
+        <div></div>
+    </div>
     <div class="page-wraper">
         <!-- Content -->
         <canvas class="site-nav-canvas" style="display: none;"></canvas>
